--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "active-model-adapter": "2.1.1",
     "body-parser": "^1.15.2",
-    "broccoli-plugin": "1.3.0",
-    "broccoli-merge-trees": "1.2.1",
     "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
+    "broccoli-merge-trees": "1.2.1",
+    "broccoli-plugin": "1.3.0",
     "broccoli-uglify-js": "^0.2.0",
     "connect-restreamer": "^1.0.3",
     "cors": "^2.7.1",
@@ -59,6 +59,7 @@
     "ember-service-worker": "0.6.1",
     "ember-service-worker-asset-cache": "0.6.0",
     "ember-service-worker-cache-fallback": "0.6.0",
+    "ember-service-worker-cache-first": "0.6.1",
     "ember-service-worker-index": "0.6.1",
     "ember-try": "0.2.8",
     "ember-watson": "^0.8.1",
