--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  xcode:
+    version: "9.0"
   environment:
     GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"'
     XCODE_SCHEME: browse.goodcity
@@ -48,14 +50,14 @@ test:
 
 deployment:
   staging:
-    branch: master
+    branch: xcode-upgrade-to-9.0
     commands:
-      - bundle exec cap staging deploy
+      # - bundle exec cap staging deploy
       - bundle exec rake staging ios app:build
       - bundle exec fastlane ios staging
-      - bundle exec rake staging android app:build
-      - bundle exec fastlane android staging
-      - curl https://api.rollbar.com/api/1/sourcemap/download -F access_token=$ROLLBAR_KEY -F version=$APP_VERSION -F minified_url=https://browse-staging.goodcity.hk/assets/browse.js
+      # - bundle exec rake staging android app:build
+      # - bundle exec fastlane android staging
+      # - curl https://api.rollbar.com/api/1/sourcemap/download -F access_token=$ROLLBAR_KEY -F version=$APP_VERSION -F minified_url=https://browse-staging.goodcity.hk/assets/browse.js
   production:
     branch: live
     commands:
