--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "connect-restreamer": "^1.0.3",
     "cors": "^2.8.4",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^2.12.0",
+    "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "6.6.0",
     "ember-cli-coffeescript": "^1.16.1",
