--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "express": "^4.14.0",
     "glob": "^4.5.3",
     "loader.js": "^4.0.11",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "node-sass": "^4.9.2"
   },
   "dependencies": {
     "cordova": "^6.5.0",
