--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "glob": "^4.5.3",
     "loader.js": "^4.0.11",
     "morgan": "^1.7.0",
-    "node-sass": "^4.9.2"
+    "ember-cli-sass": "^7.1.7"
   },
   "dependencies": {
     "cordova": "^6.5.0",
