--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ember-cli-photoswipe": "1.1.0",
     "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "7.1.4",
+    "ember-cli-sass": "^7.1.7",
     "ember-cli-slick-carousel": "0.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "2.2.0",
@@ -64,23 +64,21 @@
     "ember-rollbar-client": "0.2.2",
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
-    "glob": "^5.0.14",
+    "glob": "^4.5.3",
     "liquid-fire": "0.27.1",
-    "loader.js": "^4.0.1",
+    "loader.js": "^4.0.11",
     "ember-welcome-page": "^3.1.1",
     "express": "^4.14.0",
-    "glob": "^4.5.3",
-    "loader.js": "^4.0.11",
-    "morgan": "^1.7.0",
-    "ember-cli-sass": "^7.1.7"
+    "morgan": "^1.7.0"
   },
   "dependencies": {
-    "cordova": "^6.5.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
     "blueimp-file-upload": "^9.17.0",
     "cloudinary-jquery-file-upload": "^2.2.0",
+    "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git",
-    "jquery": "^3.2.0"
+    "jquery": "^3.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
+    "yarn": "^1.9.2"
   }
 }
