changed staging branch name to GCW-1999-xcode-upgrade to test the build in staging

--- a/circle.yml
+++ b/circle.yml
@@ -49,7 +49,7 @@ test:
 
 deployment:
   staging:
-    branch: master
+    branch: GCW-1999-xcode-upgrade
     commands:
       - bundle exec cap staging deploy
       - bundle exec rake staging ios app:build
