--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ machine:
     PILOT_SKIP_SUBMISSION: true
     PILOT_WAIT_PROCESSING_INTERVAL: 60
     ANDROID_HOME: "${HOME}/android-sdk"
-    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin:$HOME/.yarn/bin:$ANDROID_HOME/tools"
+    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin:$HOME/.yarn/bin:${ANDROID_HOME}/tools"
 
 dependencies:
   cache_directories:
@@ -19,6 +19,7 @@ dependencies:
   pre:
     - brew update
     - brew install homebrew/core/node6-lts
+    - echo 'export PATH="/usr/local/opt/node@6/bin:$PATH"' >> ~/.circlerc
     - mkdir -p ${ANDROID_HOME}
     - if ! $(grep -q "Revision=23.0.1" $ANDROID_HOME/tools/source.properties); then (curl -o ~/android-sdk.zip https://dl.google.com/android/repository/tools_r23.0.1-macosx.zip && unzip -d ${ANDROID_HOME} ~/android-sdk.zip) && (( sleep 5 && while [ 1 ]; do sleep 1; echo y; done ) | android update sdk --no-ui --all --filter platform-tools,build-tools-23.0.1,android-23,extra-android-m2repository,extra-google-m2repository); fi
     - if ! (which yarn); then curl -o- -L https://yarnpkg.com/install.sh | bash; fi
@@ -52,10 +53,10 @@ deployment:
     branch: GCW-1999-xcode-upgrade
     commands:
       - bundle exec cap staging deploy
-      - bundle exec rake staging ios app:build
-      - bundle exec fastlane ios staging
       - bundle exec rake staging android app:build
       - bundle exec fastlane android staging
+      - bundle exec rake staging ios app:build
+      - bundle exec fastlane ios staging
       - curl https://api.rollbar.com/api/1/sourcemap/download -F access_token=$ROLLBAR_KEY -F version=$APP_VERSION -F minified_url=https://browse-staging.goodcity.hk/assets/browse.js
   production:
     branch: live
