--- a/circle.yml
+++ b/circle.yml
@@ -50,7 +50,7 @@ test:
 
 deployment:
   staging:
-    branch: GCW-1999-xcode-upgrade
+    branch: master
     commands:
       - bundle exec cap staging deploy
       - bundle exec rake staging android app:build
@@ -59,7 +59,7 @@ deployment:
       - bundle exec fastlane ios staging
       - curl https://api.rollbar.com/api/1/sourcemap/download -F access_token=$ROLLBAR_KEY -F version=$APP_VERSION -F minified_url=https://browse-staging.goodcity.hk/assets/browse.js
   production:
-    branch: live
+    branch: GCW-1999-xcode-upgrade
     commands:
       - bundle exec cap production deploy
       - bundle exec rake production android app:build
