--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "broccoli-uglify-js": "^0.2.0",
     "connect-restreamer": "^1.0.3",
     "cors": "^2.8.4",
+    "node-sass": "^4.9.3",
     "ember-ajax": "^3.0.0",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
