--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "browse",
-  "version": "0.0.0",
+  "version": "0.15.0",
   "description": "Small description for browse goes here",
+  "license": "MIT",
+  "author": "",
   "private": true,
   "directories": {
     "doc": "doc",
     "test": "tests"
+  },
+  "repository": {
+    "url": "https://github.com/crossroads/browse.goodcity.git",
+    "private": true
   },
   "scripts": {
     "start": "EMBER_CLI_CORDOVA=0 ember server --port 4202 --live-reload-port 35731",
     "build": "EMBER_CLI_CORDOVA=0 ember build",
     "test": "EMBER_CLI_CORDOVA=0 ember test --server"
   },
-  "repository": "",
   "engines": {
     "node": ">= 6"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "active-model-adapter": "2.2.0",
     "body-parser": "^1.15.2",
@@ -75,6 +78,9 @@
     "node-sass": "^4.9.3"
   },
   "dependencies": {
+    "bower": "^1.8.4",
+    "codeclimate-test-reporter": "^0.5.0",
+    "cordova-update-config": "^1.0.2",
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
     "blueimp-file-upload": "^9.17.0",
     "cloudinary-jquery-file-upload": "^2.2.0",
