--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,8 @@ jobs:
 
   package_dependencies:
     <<: *defaults
+    docker:
+      - image: circleci/ruby:2.5.1-node
 
     steps:
       - restore-cache: *restore-repo-cache
@@ -65,6 +67,9 @@ jobs:
       - run:
           name: Start Ember test server
           command: yarn run ember server --port 4202
+          background: true
+      - run:
+          name: Wait for Ember test server to start
           command: dockerize -wait tcp://localhost:4202 -timeout 1m
       - run:
           name: Run Ember tests
@@ -81,7 +86,7 @@ jobs:
       - restore-cache: *restore-yarn-cache
       - restore-cache: *restore-bower-cache
       - attach_workspace:
-          at: ~/stock.goodcity
+          at: ~/browse.goodcity
       - run:
           name: Upload coverage results to Code Climate
           command: |
