--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "morgan": "^1.7.0"
   },
   "dependencies": {
+    "bower": "^1.8.4",
+    "codeclimate-test-reporter": "^0.5.0",
+    "cordova-update-config": "^1.0.2",
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
     "blueimp-file-upload": "^9.17.0",
     "cloudinary-jquery-file-upload": "^2.2.0",
