android_build job added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,6 +172,67 @@ jobs:
           paths:
             - cordova/www
 
+  android_build:
+    <<: *defaults
+    docker:
+      - image: circleci/android:api-26-node8-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
+      KEYSTORE: goodcity.keystore
+    steps:
+      - restore-cache: *restore-repo-cache
+      - restore-cache: *restore-yarn-cache
+      - restore-cache: *restore-bower-cache
+      - attach_workspace:
+          at: ~/crossroads/browse.goodcity
+      - run:
+          name: Setup Environment variables
+          command: |
+            echo 'export APP_NAME=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo Browse GoodCity; else echo S. Browse GoodCity; fi)' >> $BASH_ENV
+            echo 'export APP_ID=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo hk.goodcity.browse; else echo hk.goodcity.browsestaging; fi)' >> $BASH_ENV
+            echo 'export APP_VERSION=$(jq -r ".version" package.json)' >> $BASH_ENV
+            echo 'export ENVIRONMENT=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo production; else echo staging; fi)' >> $BASH_ENV
+            echo 'export PATH=$PATH:`yarn bin`' >> $BASH_ENV
+            echo 'export BUILD=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo --release; else echo --debug; fi)' >> $BASH_ENV
+            echo 'export PATH=$PATH:$ANDROID_HOME/tools/gradle/bin' >> $BASH_ENV
+      - run: azure-filestore download -f ${KEYSTORE} && mv ${KEYSTORE} cordova/
+      - run: azure-filestore download -d google-play -f ${GOOGLE_PLAY_KEY_FILE} && mv ${GOOGLE_PLAY_KEY_FILE} fastlane/
+      - run:
+          name: Print Environment variables
+          command: |
+            echo APP_NAME=$APP_NAME
+            echo APP_ID=$APP_ID
+            echo APP_VERSION=$APP_VERSION
+            echo ENVIRONMENT=$ENVIRONMENT
+            echo PATH=$PATH
+            echo BUILD=$BUILD
+      - run:
+          name: Install Gradle 3.3
+          command: |
+            wget -O /tmp/gradle.zip https://downloads.gradle.org/distributions/gradle-3.3-bin.zip
+            unzip -d $ANDROID_HOME/tools /tmp/gradle.zip
+            mv $ANDROID_HOME/tools/gradle-3.3 $ANDROID_HOME/tools/gradle
+      - run:
+          name: Apply App settings
+          command: cordova-update-config --appname ${APP_NAME} --appid ${APP_ID} --appversion ${APP_VERSION}
+          working_directory: cordova
+
+      - run:
+          name: Cordova Prepare
+          command: cordova prepare android
+          working_directory: cordova
+
+      - run:
+          name: Cordova Compile
+          command: |
+            echo KEYSTORE=$KEYSTORE
+            echo GOODCITY_KEYSTORE_ALIAS=$GOODCITY_KEYSTORE_ALIAS
+            cordova compile android "${BUILD}" --device -- --keystore="${KEYSTORE}" --storePassword="${GOODCITY_KEYSTORE_PASSWORD}" --alias="${GOODCITY_KEYSTORE_ALIAS}" --password="${GOODCITY_KEYSTORE_PASSWORD}"
+          working_directory: cordova
+      - store_artifacts:
+          path: /home/circleci/code/cordova/platforms/android/build/outputs/apk/
+
+
 workflows:
     version: 2
     build_and_bundle:
@@ -183,16 +244,19 @@ workflows:
         - test_cases:
             requires:
               - package_dependencies
-        - upload-coverage:
-            requires:
-              - package_dependencies
-              - test_cases
-        - www_build:
-            requires:
-              - upload-coverage
+        # - upload-coverage:
+        #     requires:
+        #       - package_dependencies
+        #       - test_cases
+        # - www_build:
+        #     requires:
+        #       - upload-coverage
         # - www-deploy:
         #     requires:
         #       - www_build
         - ember_cordova_build:
             requires:
               - package_dependencies
+        - android_build:
+            requires:
+              - ember_cordova_build
