--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 aliases:
 defaults: &defaults
     docker:
-      - image: circleci/node:8.11.4
+      - image: circleci/node:8
     working_directory: ~/crossroads/browse.goodcity
 restore-repo-cache: &restore-repo-cache
     key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
@@ -174,6 +174,7 @@ jobs:
 
   android_build:
     <<: *defaults
+
     docker:
       - image: circleci/android:api-26-node8-alpha
     environment:
@@ -211,10 +212,10 @@ jobs:
             wget -O /tmp/gradle.zip https://downloads.gradle.org/distributions/gradle-3.3-bin.zip
             unzip -d $ANDROID_HOME/tools /tmp/gradle.zip
             mv $ANDROID_HOME/tools/gradle-3.3 $ANDROID_HOME/tools/gradle
-
       - run:
           name: Apply App settings
           command: cordova-update-config --appname ${APP_NAME} --appid ${APP_ID} --appversion ${APP_VERSION}
+          working_directory: cordova
 
       - run:
           name: Cordova Prepare
