cordova-update-config removed globall

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,6 @@ jobs:
     steps:
       - restore-cache: *restore-repo-cache
       - restore-cache: *restore-yarn-cache
-      - run: yarn global add cordova-update-config@^1.0.2
       - run: *yarn
       - save-cache: *save-yarn-cache
       - restore-cache: *restore-bower-cache
@@ -207,6 +206,7 @@ jobs:
             echo ENVIRONMENT=$ENVIRONMENT
             echo PATH=$PATH
             echo BUILD=$BUILD
+      - run: mv ../dist/ cordova/www
       - run:
           name: Install Gradle 3.3
           command: |
