--- a/package.json
+++ b/package.json
@@ -20,23 +20,22 @@
   "license": "MIT",
   "devDependencies": {
     "active-model-adapter": "2.2.0",
-    "broccoli-asset-rev": "^2.4.2",
     "body-parser": "^1.15.2",
-    "broccoli-plugin": "1.3.0",
-    "broccoli-merge-trees": "1.2.1",
+    "broccoli-asset-rev": "^2.4.2",
     "broccoli-clean-css": "^1.1.0",
+    "broccoli-merge-trees": "1.2.1",
+    "broccoli-plugin": "1.3.0",
     "broccoli-uglify-js": "^0.2.0",
     "connect-restreamer": "^1.0.3",
     "cors": "^2.8.4",
-    "node-sass": "^4.9.3",
     "ember-ajax": "^3.0.0",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "6.6.0",
+    "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
     "ember-cli-content-security-policy": "^0.5.0",
     "ember-cli-cordova": "0.1.0-beta-2",
-    "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-html5-validation": "0.2.4",
     "ember-cli-htmlbars": "^2.0.3",
@@ -65,12 +64,13 @@
     "ember-rollbar-client": "0.2.2",
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
-    "glob": "^4.5.3",
-    "liquid-fire": "0.27.1",
-    "loader.js": "^4.0.11",
     "ember-welcome-page": "^3.1.1",
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "glob": "^4.5.3",
+    "liquid-fire": "~0.29.5",
+    "loader.js": "^4.0.11",
+    "morgan": "^1.7.0",
+    "node-sass": "^4.9.3"
   },
   "dependencies": {
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
