--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ember-offline": "1.0.0",
     "ember-resolver": "^4.5.0",
     "ember-rollbar-client": "0.2.2",
+    "ember-scroll-to": "0.6.4",
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
