integrate moment timezone plugin and change helper

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,8 @@
     "Foundation",
     "io",
     "moment",
-    "airbrakeJs"
+    "airbrakeJs",
+    "moment-timezone"
   ],
   "browser": true,
   "boss": true,
