--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "photoswipe": "4.1.0",
     "pickadate": "3.5.6",
     "slick-carousel": "1.5.8",
-    "socket.io-client": "~1.4.5"
+    "socket.io-client": "~1.4.5",
+    "moment-timezone": "^0.5.23"
   },
   "devDependencies": {
     "ember-qunit-notifications": "0.1.0",
