--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "EMBER_CLI_CORDOVA=0 ember server --port 4202 --live-reload-port 35731",
     "build": "EMBER_CLI_CORDOVA=0 ember build",
-    "test": "EMBER_CLI_CORDOVA=0 ember test --server"
+    "test": "EMBER_CLI_CORDOVA=0 ember test --server",
+    "test:ci": "EMBER_CLI_CORDOVA=0 ember-pretty-test"
   },
   "engines": {
     "node": ">= 6"
@@ -29,6 +30,7 @@
     "broccoli-merge-trees": "1.2.1",
     "broccoli-plugin": "1.3.0",
     "broccoli-uglify-js": "^0.2.0",
+    "chalk": "^2.4.1",
     "connect-restreamer": "^1.0.3",
     "cors": "^2.8.4",
     "ember-ajax": "^3.0.0",
@@ -64,6 +66,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-lodash": "4.19.1",
     "ember-offline": "1.0.0",
+    "ember-pretty-test": "1.0.4",
     "ember-resolver": "^4.5.0",
     "ember-rollbar-client": "0.2.2",
     "ember-scroll-to": "0.6.4",
