--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,4 +343,4 @@ workflows:
               - test_cases
             filters:
               branches:
-                only: /^(live)$/ #For now iOS build available for live only
+                only: /^(master|live)$/
