--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - restore-cache: *restore-bower-cache
       - run:
           name: Run Ember tests
-          command: COVERAGE=true yarn run test:ci
+          command: COVERAGE=true yarn run test
       - persist_to_workspace:
           root: .
           paths:
