--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "EMBER_CLI_CORDOVA=0 ember server --port 4202 --live-reload-port 35731",
     "build": "EMBER_CLI_CORDOVA=0 ember build",
-    "test": "EMBER_CLI_CORDOVA=0 ember test --server",
+    "test": "EMBER_CLI_CORDOVA=0 ember test",
     "test:ci": "EMBER_CLI_CORDOVA=0 ember-pretty-test"
   },
   "engines": {
@@ -66,7 +66,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-lodash": "4.19.1",
     "ember-offline": "1.0.0",
-    "ember-pretty-test": "1.0.4",
+    "ember-pretty-test": "^1.0.4",
     "ember-resolver": "^4.5.0",
     "ember-rollbar-client": "0.2.2",
     "ember-scroll-to": "0.6.4",
@@ -81,14 +81,14 @@
     "node-sass": "^4.9.3"
   },
   "dependencies": {
-    "bower": "^1.8.4",
-    "codeclimate-test-reporter": "^0.5.0",
-    "cordova-update-config": "^1.0.2",
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
     "blueimp-file-upload": "^9.17.0",
+    "bower": "^1.8.4",
     "cloudinary-jquery-file-upload": "^2.2.0",
+    "codeclimate-test-reporter": "^0.5.0",
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
+    "cordova-update-config": "^1.0.2",
     "jquery": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "yarn": "^1.9.2"
