--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,19 +297,19 @@ workflows:
         - package_dependencies:
             requires:
               - checkout_code
-        - test_cases:
-            requires:
-              - package_dependencies
-        - upload-coverage:
-            requires:
-              - package_dependencies
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
+#         - test_cases:
+#             requires:
+#               - package_dependencies
+#         - upload-coverage:
+#             requires:
+#               - package_dependencies
+#               - test_cases
+#             filters:
+#               branches:
+#                 only: /^(master|live)$/
         - www_build:
             requires:
-              - test_cases
+              - package_dependencies
             filters:
               branches:
                 only: /^(master|live)$/
@@ -321,7 +321,7 @@ workflows:
                 only: /^(master|live)$/
         - ember_cordova_build:
             requires:
-              - test_cases
+              - package_dependencies
             filters:
               branches:
                 only: /^(master|live)$/
@@ -331,9 +331,9 @@ workflows:
             filters:
               branches:
                 only: /^(master|live)$/
-        # - ios_build_and_deploy:
-        #     requires:
-        #       - test_cases
-        #     filters:
-        #       branches:
-        #         only: /^(master|live)$/
+        - ios_build_and_deploy:
+            requires:
+              - package_dependencies
+            filters:
+              branches:
+                only: /^(live)$/
