--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,10 +340,10 @@ workflows:
               - ember_cordova_build
             filters:
               branches:
-                only: /^(master)$/
-        - ios_build_and_deploy:
-            requires:
-              - test_cases
-            filters:
-              branches:
-                only: live
+                only: /^(master|live)$/
+        # - ios_build_and_deploy:
+        #     requires:
+        #       - test_cases
+        #     filters:
+        #       branches:
+        #         only: live
