--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
     "ember-cli-photoswipe": "1.1.0",
+    "ember-form-validator": "1.0.5",
     "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^7.1.7",
