changed app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GoodCityCharity",
+  "name": "goodcity-for-charities",
   "version": "0.5.0",
   "description": "Small description for browse goes here",
   "license": "MIT",
