--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "browse",
+  "name": "goodcity-for-charities",
   "dependencies": {
     "cloudinary": "~1.0.24",
     "ember": "~2.14.0",
