Revert "fix test cases"
This reverts commit 0f39658d4b3b2a97c851b1e165d1b6967719f781.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "goodcity-for-charities",
+  "name": "browse",
   "dependencies": {
     "cloudinary": "~1.0.24",
     "ember": "~2.14.0",
