--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ aliases:
 
   - defaults: &defaults
       docker:
-        - image: circleci/node:boron
+        - image: circleci/node:carbon
       working_directory: ~/code
   - &restore-repo-cache
       key: v2-browse-goodcity-{{ .Environment.CIRCLE_SHA1 }}
@@ -83,6 +83,9 @@ jobs:
       - restore-cache: *restore-repo-cache
       - restore-cache: *restore-yarn-cache
       - restore-cache: *restore-bower-cache
+      - run:
+          name: rebuild node-sass
+          command: npm rebuild node-sass
       - run:
           name: Start Ember test server
           command: yarn run ember server --port 4202
