--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "6.6.0",
-    "ember-scroll-to-bottom": "1.2.0",
+    "ember-scroll-to-bottom": "^1.2.0",
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
     "ember-cli-content-security-policy": "^0.5.0",
@@ -83,16 +83,16 @@
     "node-sass": "^4.9.3"
   },
   "dependencies": {
-    "bower": "^1.8.4",
-    "codeclimate-test-reporter": "^0.5.0",
-    "cordova-update-config": "^1.0.2",
     "azure-api": "git://github.com/crossroads/azure-api.git#master",
     "blueimp-file-upload": "^9.17.0",
+    "bower": "^1.8.4",
     "cloudinary-jquery-file-upload": "^2.2.0",
+    "codeclimate-test-reporter": "^0.5.0",
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
+    "cordova-update-config": "^1.0.2",
     "jquery": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "yarn": "^1.9.2"
+    "yarn": "^1.13.0"
   }
 }
