--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "6.6.0",
-    "ember-scroll-to-bottom": "^1.2.0",
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
     "ember-cli-content-security-policy": "^0.5.0",
@@ -50,7 +49,6 @@
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
     "ember-cli-photoswipe": "1.1.0",
-    "ember-form-validator": "1.0.5",
     "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^7.1.7",
@@ -63,6 +61,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "2.2.0",
+    "ember-form-validator": "1.0.5",
     "ember-i18n": "~5.1.0",
     "ember-infinity": "^0.2.5",
     "ember-load-initializers": "^1.0.0",
@@ -72,6 +71,7 @@
     "ember-resolver": "^4.5.0",
     "ember-rollbar-client": "0.2.2",
     "ember-scroll-to": "0.6.4",
+    "ember-scroll-to-bottom": "^1.2.0",
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
@@ -91,6 +91,7 @@
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
     "cordova-update-config": "^1.0.2",
+    "ip-regex": "2",
     "jquery": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "yarn": "^1.12.3"
