--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.1",
     "ember-cli-babel": "6.6.0",
+    "ember-cli-preprocess-registry": "3.1.2",
     "ember-scroll-to-bottom": "^1.2.0",
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
