restore config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
   test_cases:
     <<: *defaults
     docker:
-      - image: circleci/node:8-browsers
+      - image: circleci/node:6-browsers
     environment:
       JOBS: 1
     steps:
@@ -86,13 +86,13 @@ jobs:
       - run:
           name: rebuild node-sass
           command: npm rebuild node-sass
-      # - run:
-      #     name: Start Ember test server
-      #     command: yarn run ember server --port 4202
-      #     background: true
-      # - run:
-      #     name: Wait for Ember test server to start
-      #     command: dockerize -wait tcp://localhost:4202 -timeout 1m
+      - run:
+          name: Start Ember test server
+          command: yarn run ember server --port 4202
+          background: true
+      - run:
+          name: Wait for Ember test server to start
+          command: dockerize -wait tcp://localhost:4202 -timeout 1m
       - run:
           name: Run Ember tests
           command: COVERAGE=true yarn run test:ci
