--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "ember-rollbar-client": "0.2.2",
     "ember-scroll-to": "0.6.4",
     "ember-scroll-to-bottom": "^1.2.0",
+    "ember-smart-banner": "0.1.3",
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
