GCW-2305 App name changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browse",
   "version": "0.5.3",
-  "description": "Small description for browse goes here",
+  "description": "Small description for GoodCity Charity goes here",
   "license": "MIT",
   "author": "",
   "private": true,
