--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,35 +344,35 @@ workflows:
               - test_cases
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
         - www_build:
             requires:
               - package_dependencies
               - test_cases
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
         - www-deploy:
             requires:
               - www_build
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
         - ember_cordova_build:
             requires:
               - test_cases
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
         - android_build_and_deploy:
             requires:
               - ember_cordova_build
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
         - ios_build_and_deploy:
             requires:
               - test_cases
             filters:
               branches:
-                only: /^(master|live|GCW-2305-app-name-change)$/
+                only: /^(master|live)$/
