--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
+    "ember-concurrency": "0.8.27",
     "express": "^4.14.0",
     "glob": "^4.5.3",
     "husky": "^1.2.0",
