--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "2.2.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.8.27",
     "ember-data": "^3.1.0",
     "ember-data-factory-guy": "2.7.0-beta.8",
     "ember-disable-proxy-controllers": "^1.0.1",
@@ -87,7 +88,6 @@
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
-    "ember-concurrency": "0.8.27",
     "express": "^4.14.0",
     "glob": "^4.5.3",
     "husky": "^1.2.0",
@@ -96,6 +96,7 @@
     "loader.js": "^4.0.11",
     "morgan": "^1.7.0",
     "node-sass": "^4.9.3",
+    "ember-infinite-list": "^1.0.4",
     "prettier": "1.15.3"
   },
   "dependencies": {
