--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "private": true
   },
   "scripts": {
-    "start": "EMBER_CLI_CORDOVA=0 ember server --port 4202 --live-reload-port 35731",
-    "build": "EMBER_CLI_CORDOVA=0 ember build",
-    "test": "EMBER_CLI_CORDOVA=0 ember test --server",
-    "test:ci": "EMBER_CLI_CORDOVA=0 ember-pretty-test"
+    "start": "cross-env EMBER_CLI_CORDOVA=0 ember server --port 4202 --live-reload-port 35731",
+    "start:staging": "cross-env EMBER_CLI_CORDOVA=0 STAGING=true ember server --environment production --port 4202 --live-reload-port 35731",
+    "build": "cross-env EMBER_CLI_CORDOVA=0 ember build",
+    "test": "cross-env EMBER_CLI_CORDOVA=0 ember test --server",
+    "test:ci": "cross-env EMBER_CLI_CORDOVA=0 ember-pretty-test"
   },
   "husky": {
     "hooks": {
@@ -44,6 +45,7 @@
     "chalk": "^2.4.1",
     "connect-restreamer": "^1.0.3",
     "cors": "^2.8.4",
+    "cross-env": "^5.2.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "2.15.0",
     "ember-cli-app-version": "^2.0.1",
@@ -67,6 +69,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "2.2.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.8.27",
     "ember-data": "^3.1.0",
     "ember-data-factory-guy": "2.7.0-beta.8",
     "ember-disable-proxy-controllers": "^1.0.1",
@@ -87,7 +90,6 @@
     "ember-try": "0.2.23",
     "ember-watson": "^0.8.1",
     "ember-welcome-page": "^3.1.1",
-    "ember-concurrency": "0.8.27",
     "express": "^4.14.0",
     "glob": "^4.5.3",
     "husky": "^1.2.0",
