--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "node": ">= 6"
   },
   "devDependencies": {
+    "@fortawesome/ember-fontawesome": "^0.1.14",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "active-model-adapter": "2.2.0",
     "body-parser": "^1.15.2",
     "broccoli-asset-rev": "^2.4.2",
