--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
     "cordova-update-config": "^1.0.2",
+    "ember-i18n-intl-migrator": "^0.4.0",
+    "ember-intl": "4",
     "jquery": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "yarn": "^1.9.2"
