--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "ember": "~2.14.0",
     "ember-cli-shims": "0.1.1",
     "fastclick": "^1.0.3",
-    "foundation": "~5.5.0",
     "jquery-placeholder": "^2.3.1",
     "jquery.cookie": "^1.4.1",
     "lightgallery": "1.2.20",
@@ -16,7 +15,8 @@
     "slick-carousel": "1.5.8",
     "socket.io-client": "~1.4.5",
     "moment-timezone": "^0.5.23",
-    "pickadate": "git://github.com/crossroads/pickadate.js#master"
+    "pickadate": "git://github.com/crossroads/pickadate.js#master",
+    "foundation-sites": "^6.5.3"
   },
   "devDependencies": {
     "ember-qunit-notifications": "0.1.0",
